# degit-template-cpp

./: CMakeLists.txt  README.md  cookie.cpp  food.cpp  main.cpp  mylibrary.hpp
tests/: test_addition.cpp
